Add submit button to form

--- a/views/form.hbs
+++ b/views/form.hbs
@@ -7,4 +7,5 @@
     Message:
     <input type="text" placeholder="Message" name="message" />
   </label>
+  <button type="submit">Post Message</button>
 </form>
