Change input name from name to user

--- a/views/form.hbs
+++ b/views/form.hbs
@@ -1,7 +1,7 @@
 <form method="post" action="/new">
   <label>
     Name:
-    <input type="text" placeholder="Author's name" name="name" />
+    <input type="text" placeholder="Author's name" name="user" />
   </label>
   <label>
     Message:
