--- a/views/form.hbs
+++ b/views/form.hbs
@@ -1,4 +1,4 @@
-<form method="post" action="/new">
+<form method="post" action="/messages/new">
   <label>
     Name:
     <input type="text" placeholder="Author's name" name="user" />
