Add link to new message

--- a/views/messages.hbs
+++ b/views/messages.hbs
@@ -1,6 +1,7 @@
 <h1>{{title}}</h1>
 <ul class="messages">
-    {{#each messages}}
-        <li>{{this}}</li>
-    {{/each}}
+  {{#each messages}}
+    <li>{{this}}</li>
+  {{/each}}
 </ul>
+<a href="/messages/new">New message</a>
