Update message to display user, text, and date

--- a/views/messages.hbs
+++ b/views/messages.hbs
@@ -1,7 +1,7 @@
 <h1>{{title}}</h1>
 <ul class="messages">
   {{#each messages}}
-    <li>{{this}}</li>
+    <li>{{this.user}}: {{this.text}} - {{this.added}}</li>
   {{/each}}
 </ul>
 <a href="/messages/new">New message</a>
